--- a/application/pom.xml
+++ b/application/pom.xml
@@ -10,7 +10,14 @@
     </parent>
 
     <artifactId>application</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- other dependencies -->
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
